@@ -1,5 +1,6 @@
 [2018-08-21]
 - Fixed loading of old URL saves with SQI bonuses [Loa]
+- Fixed Tegron stats [Loa]
 
 [2018-08-11]
 - Fixed Poison Knife itemid [Loa]
